<resources>
    <string name="app_name">Test</string>

    <string name="layout_linear">android.support.v7.widget.LinearLayoutManager</string>


    <string name="menu_cloud">Cloud</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_inventory">Inventory</string>

    <string name="element_health">건강</string>
    <string name="element_finances">재정</string>
    <string name="element_emotional">감정</string>
    <string name="element_environment">환경</string>
    <string name="element_relationships">관계</string>
    <string name="element_appearance">외면</string>
    <string name="element_education">교육</string>
    <string name="element_spirituality">정신</string>
    <string name="element_business">사업</string>

    <string name="calendar_mon">월</string>
    <string name="calendar_tue">화</string>
    <string name="calendar_wen">수</string>
    <string name="calendar_the">목</string>
    <string name="calendar_fri">금</string>
    <string name="calendar_sat">토</string>
    <string name="calendar_sun">일</string>

    <!--Purpose : Mission-->
    <string name="purpose_title">미션제목</string>
    <string name="purpose_description">미션설명</string>
    <string name="purpose_dtStart">시작일</string>
    <string name="purpose_dtEnd">종료일</string>
    <string name="purpose_allday">하루종일</string>
    <string name="purpose_hasAlarm">알람</string>
    <string name="purpose_rrule">반복</string>
    <string name="purpose_rdate">반복날짜</string>
    <string name="purpose_rank">중요도</string>

    <!--Object : Task List, Schedule-->
    <string name="object_title">항목제목</string>
    <string name="object_description">항목설명</string>
    <string name="object_dtStart">시작일</string>
    <string name="object_dtEnd">종료일</string>
    <string name="object_allday">하루종일</string>
    <string name="object_hasAlarm">알람</string>
    <string name="object_rrule">반복</string>
    <string name="object_rdate">반복날짜</string>
    <string name="object_rank">중요도</string>


    <!--Setting-->
    <string name="set_title_account">계정관리</string>
    <string name="set_title_content">컨텐츠 설정</string>
    <string name="set_title_guide">Test 안내</string>
    <string name="set_account">연결 계정</string>
    <string name="set_password">암호설정</string>
    <string name="set_data">데이타 관리</string>
    <string name="set_start_day">시작요일</string>
    <string name="set_start_day_mon">월요일</string>
    <string name="set_start_day_sun">일요일</string>
    <string name="set_start_day_sat">토요일</string>
    <string name="set_device_calendar">캘린더 동기화</string>
    <string name="set_auto_save">자동저장 사용</string>

    <string name="set_weather">날씨</string>
    <string name="set_diary">일기</string>
    <string name="set_photo">사진</string>
    <string name="set_admin_qna">QnA</string>
    <string name="set_admin">관리자 문의</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="rrule_none">없음</string>
    <string name="rrule_year">매년</string>
    <string name="rrule_month">매월</string>
    <string name="rrule_week">매주</string>
    <string name="rrule_day">요일마다</string>
    <string name="rrule_date">매일</string>

    <string name="alarm_none">없음</string>
    <string name="alarm_before_week">일주일 전</string>
    <string name="alarm_before_day">하루 전</string>
    <string name="alarm_before_today">당일</string>
    <string name="alarm_before_two_hour">2시간 전</string>
    <string name="alarm_before_one_hour">1시간 전</string>
    <string name="alarm_before_half_hour">30분 전</string>
    <string name="alarm_before_quarter_hour">15분 전</string>
    <string name="alarm_before_five_min">5분 전</string>

    <string name="noti_cancel">저장하지 않은 내용은 사라집니다</string>

</resources>
